--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
   },
   "devDependencies": {
     "axios": "^0.19.0",
+    "chart.js": "^2.8.0",
     "cross-env": "^5.2.0",
     "laravel-mix": "^4.1.2",
     "tailwindcss": "^1.1.2",
+    "v-calendar": "^0.9.7",
     "vue": "^2.6.10",
-    "vue-rangedate-picker": "^1.0.0",
+    "vue-chartjs": "^3.4.2",
     "vue-router": "^3.1.2",
     "vue-template-compiler": "^2.6.10"
   },
   "dependencies": {
-    "chart.js": "^2.8.0",
-    "vue-chartjs": "^3.4.2"
+    "momentjs": "^2.0.0"
   }
 }
