--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-template-compiler": "^2.6.10"
   },
   "dependencies": {
-    "momentjs": "^2.0.0"
+    "momentjs": "^2.0.0",
+    "vue-multiselect": "^2.1.6"
   }
 }
