--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "vue": "^2.6.10",
     "vue-chartjs": "^3.4.2",
     "vue-router": "^3.1.2",
-    "vue-template-compiler": "^2.6.10"
-  },
-  "dependencies": {
+    "vue-template-compiler": "^2.6.10",
     "momentjs": "^2.0.0",
     "randomcolor": "^0.5.4",
     "vue-multiselect": "^2.1.6"
