--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "chart.js": "^2.8.0",
     "cross-env": "^5.2.0",
     "laravel-mix": "^4.1.2",
+    "laravel-mix-purgecss": "^4.1.0",
+    "momentjs": "^2.0.0",
+    "randomcolor": "^0.5.4",
     "tailwindcss": "^1.1.2",
     "v-calendar": "^0.9.7",
     "vue": "^2.6.10",
     "vue-chartjs": "^3.4.2",
+    "vue-click-outside": "^1.0.7",
+    "vue-multiselect": "^2.1.6",
     "vue-router": "^3.1.2",
-    "vue-template-compiler": "^2.6.10",
-    "momentjs": "^2.0.0",
-    "randomcolor": "^0.5.4",
-    "vue-multiselect": "^2.1.6"
+    "vue-template-compiler": "^2.6.10"
   }
 }
