--- a/.styleci.yml
+++ b/.styleci.yml
@@ -1,6 +1,8 @@
 preset: laravel
 enabled:
     - concat_with_spaces
+    - align_equals 
 disabled:
     - trailing_comma_in_multiline_array
     - concat_without_spaces
+    - unalign_equals
