--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,8 @@ matrix:
         - php: 7.4snapshot
           env: SETUP=lowest
 
+install:
+    - if [[ $SETUP = 'stable' ]]; then travis_retry composer update --prefer-dist --no-interaction --prefer-stable --no-suggest; fi
+    - if [[ $SETUP = 'lowest' ]]; then travis_retry composer update --prefer-dist --no-interaction --prefer-lowest --prefer-stable --no-suggest; fi
+
 script: vendor/bin/phpunit
