--- a/.travis.yml
+++ b/.travis.yml
@@ -5,17 +5,10 @@ matrix:
     fast_finish: true
     include:
         - php: 7.2
-        - php: 7.2
-          env: SETUP=lowest
         - php: 7.3
-        - php: 7.3
-          env: SETUP=lowest
         - php: 7.4snapshot
-        - php: 7.4snapshot
-          env: SETUP=lowest
 
 install:
-    - if [[ $SETUP = 'stable' ]]; then travis_retry composer update --prefer-dist --no-interaction --prefer-stable --no-suggest; fi
-    - if [[ $SETUP = 'lowest' ]]; then travis_retry composer update --prefer-dist --no-interaction --prefer-lowest --prefer-stable --no-suggest; fi
+    - travis_retry composer update --prefer-dist --no-interaction --prefer-stable --no-suggest
 
 script: vendor/bin/phpunit
