--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ matrix:
 install:
     - travis_retry composer update --prefer-dist --no-interaction --prefer-stable --no-suggest
 
-script: vendor/bin/phpunit
+script: vendor/bin/phpunit --configuration phpunit.xml
