--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ matrix:
         - php: 7.4snapshot
 
 install:
+    - pwd
+    - ls
     - travis_retry composer update --prefer-dist --no-interaction --prefer-stable --no-suggest
 
 script: vendor/bin/phpunit --configuration phpunit.xml
