--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     ],
     "require": {
         "php": ">=7.1.0",
-        "illuminate/support": "^5.7.15 | 5.8.* | ^6.0"
+        "illuminate/support": "^5.7.15 | 5.8.* | ^6.0",
+        "nesbot/carbon": "^2.30"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.3",
