--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "require": {
         "php": ">=7.1.0",
-        "illuminate/support": "^5.7.15 | 5.8.* | ^6.0 | ^7.0" | ^8.0"
+        "illuminate/support": "^5.7.15 | 5.8.* | ^6.0 | ^7.0 | ^8.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.3",
