--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,11 @@
         }
     ],
     "require": {
-        "php": ">=7.1.0",
-        "illuminate/support": "^5.7.15 | 5.8.* | ^6.0 | ^7.0"
+        "php": ">=7.3.0",
+        "illuminate/support": "^8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.3",
+        "phpunit/phpunit": "^9.0",
         "orchestra/testbench": "^3.8"
     },
     "autoload": {
