--- a/package.json
+++ b/package.json
@@ -2,26 +2,28 @@
   "private": true,
   "scripts": {
     "dev": "npm run development",
-    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch-poll": "npm run watch -- --watch-poll",
-    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "development": "mix",
+    "watch": "mix watch",
+    "watch-poll": "mix watch -- --watch-options-poll=1000",
+    "hot": "mix watch --hot",
     "prod": "npm run production",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+    "production": "mix --production"
   },
   "devDependencies": {
-    "axios": "^0.19.0",
+    "autoprefixer": "^10.4.1",
+    "axios": "^0.24.0",
     "chart.js": "^2.8.0",
     "cross-env": "^5.2.0",
-    "laravel-mix": "^4.1.2",
-    "laravel-mix-purgecss": "^4.1.0",
+    "laravel-mix": "^6.0.39",
     "momentjs": "^2.0.0",
+    "postcss": "^8.4.5",
     "randomcolor": "^0.5.4",
-    "tailwindcss": "^1.1.2",
+    "tailwindcss": "^3.0.9",
     "v-calendar": "^0.9.7",
     "vue": "^2.6.10",
     "vue-chartjs": "^3.4.2",
     "vue-click-outside": "^1.0.7",
+    "vue-loader": "^15.9.8",
     "vue-multiselect": "^2.1.6",
     "vue-router": "^3.1.2",
     "vue-template-compiler": "^2.6.10"
