--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "require": {
         "php": ">=7.3.0",
-        "illuminate/support": "^8.0"
+        "illuminate/support": "^8.0 | ^9.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
